--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/underscore": "^1.11.4",
     "craco-alias": "^3.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
