--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@web3modal/ethereum": "^2.3.7",
@@ -42,6 +43,7 @@
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
     "@types/underscore": "^1.11.4",
+    "babel-plugin-jsx-control-statements": "^4.1.2",
     "craco-alias": "^3.0.1",
     "http-proxy-middleware": "^2.0.6",
     "react-scripts": "^5.0.1",
