--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "linkify-html": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "underscore": "^1.13.6",
