--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
-    "@web3modal/ethereum": "^2.3.7",
-    "@web3modal/react": "^2.3.7",
+    "@web3modal/ethereum": "2.3.7",
+    "@web3modal/react": "2.3.7",
     "axios": "^1.4.0",
     "craco": "^0.0.3",
     "echarts": "^5.4.2",
