--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.3",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.12.3",
     "@web3modal/ethereum": "2.3.7",
     "@web3modal/react": "2.3.7",
     "axios": "^1.4.0",
