--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
-    "@web3modal/ethereum": "2.3.7",
-    "@web3modal/react": "2.3.7",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/react": "^2.7.0",
     "axios": "^1.4.0",
     "craco": "^0.0.3",
     "echarts": "^5.4.2",
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "underscore": "^1.13.6",
-    "wagmi": "0.12.12"
+    "viem": "^1.3.0",
+    "wagmi": "^1.3.9"
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false craco start",
